Fixed psat tooltip overlap

--- a/src/app/psat/modify-conditions/modify-conditions-tabs/modify-conditions-tabs-tooltip/modify-conditions-tabs-tooltip.component.css
+++ b/src/app/psat/modify-conditions/modify-conditions-tabs/modify-conditions-tabs-tooltip/modify-conditions-tabs-tooltip.component.css
@@ -7,6 +7,7 @@
     opacity: 0;
     transition: all ease 0.3s;
     font-size: 16px;
+    z-index: 5;
 }
 
 .revealed-tooltip-box {
